Refactor HTML structure and styles for library project

--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@
     // =============================
     // שימי כאן את הכתובת של השירות שעובד ב-Render:
     const RENDER_API = "https://final-project-1-4tg9.onrender.com";
+    const isLocal =
+  location.hostname === "localhost" ||
+  location.hostname === "127.0.0.1" ||
+  location.hostname === "" ||
+  location.protocol === "file:";
+
+const API_BASE = isLocal ? "http://localhost:3000" : RENDER_API;
 
     // Local אם זה: localhost / 127.0.0.1 / file://
     const isLocal =
@@ -365,4 +372,5 @@
   </script>
 </body>
 </html>
+
 
