--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@
     // אם את בודקת מקומית (כששרת רץ אצלך): "http://localhost:3000"
     // אם את בודקת דרך GitHub Pages: כאן חייב להיות ה-URL של Render (https)
     // =========================
-const API_BASE = "https://your-service.onrender.com";
-
- // <-- תשני לכתובת ה-Render כשעובדים דרך GitHub Pages
+    const API_BASE = "https://final-project-1-4tg9.onrender.com"; // <-- תשני לכתובת ה-Render כשעובדים דרך GitHub Pages
 
     async function fetchJson(path) {
       const url = API_BASE + path;
