--- a/index.html
+++ b/index.html
@@ -4,160 +4,77 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>פרויקט מסדי נתונים - ספרייה</title>
-
   <link rel="stylesheet" href="style.css" />
-
-  <style>
-    body{
-      margin:0;
-      font-family: Arial, Helvetica, sans-serif;
-      color:#fff;
-      background:#0b1220;
-      min-height:100vh;
-      display:flex;
-      align-items:flex-start;
-      justify-content:center;
-      padding:40px 16px;
-    }
-    .bg{
-      position:fixed;
-      inset:0;
-      background:
-        linear-gradient(0deg, rgba(0,0,0,.55), rgba(0,0,0,.55)),
-        url("https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=2000&q=60");
-      background-size:cover;
-      background-position:center;
-      z-index:-1;
-    }
-    .container{ width:min(1100px, 100%); }
-    header{ text-align:center; margin-bottom:22px; }
-    header h1{
-      margin:0 0 8px 0;
-      font-size:44px;
-      letter-spacing:.5px;
-      text-shadow:0 6px 18px rgba(0,0,0,.35);
-    }
-    header p{ margin:0; opacity:.9; text-shadow:0 6px 18px rgba(0,0,0,.35); }
-
-    .grid{
-      display:grid;
-      grid-template-columns: 2fr 1fr;
-      gap:18px;
-    }
-    @media (max-width: 900px){ .grid{ grid-template-columns:1fr; } }
-
-    .card{
-      background:rgba(15, 25, 45, .55);
-      border:1px solid rgba(255,255,255,.12);
-      border-radius:18px;
-      backdrop-filter: blur(10px);
-      box-shadow:0 12px 30px rgba(0,0,0,.25);
-      padding:16px;
-    }
-    .card h2{ margin:0 0 10px 0; font-size:20px; }
-
-    .actions{
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-      align-items:center;
-      margin-bottom:10px;
-    }
-    button{
-      border:0;
-      border-radius:12px;
-      padding:10px 14px;
-      cursor:pointer;
-      background:rgba(255,255,255,.14);
-      color:#fff;
-      font-weight:700;
-    }
-    button:hover{ background:rgba(255,255,255,.20); }
-
-    input, select{
-      border-radius:12px;
-      border:1px solid rgba(255,255,255,.16);
-      background:rgba(0,0,0,.18);
-      color:#fff;
-      padding:10px 12px;
-      outline:none;
-    }
-    input::placeholder{ color:rgba(255,255,255,.65); }
-
-    .hint{ opacity:.9; font-size:13px; margin-top:8px; }
-    .status{ margin-top:10px; font-size:13px; opacity:.95; }
-
-    table{
-      width:100%;
-      border-collapse:collapse;
-      overflow:hidden;
-      border-radius:12px;
-      margin-top:10px;
-    }
-    th, td{
-      padding:10px 10px;
-      border-bottom:1px solid rgba(255,255,255,.10);
-      text-align:right;
-      font-size:14px;
-      white-space:nowrap;
-    }
-    th{ background:rgba(255,255,255,.10); font-weight:800; }
-    tbody tr:hover{ background:rgba(255,255,255,.06); }
-
-    .list{ margin:10px 0 0 0; padding:0 18px 0 0; }
-    .list li{ margin:8px 0; }
-
-    .footer{ margin-top:16px; text-align:center; opacity:.85; font-size:12px; }
-    .error{ color:#ffd2d2; font-weight:700; }
-    .ok{ color:#d8ffd8; font-weight:700; }
-  </style>
 </head>
 
 <body>
   <div class="bg"></div>
 
-  <div class="container">
-    <header>
+  <header class="hero">
+    <div class="hero__inner">
       <h1>פרויקט מסדי נתונים – ספרייה</h1>
-      <p>נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים.</p>
-    </header>
+      <p class="subtitle">
+        נתונים נשאבים מה־MySQL דרך API (Node.js) ומתעדכנים לפי מה שקיים במסד הנתונים.
+      </p>
+      <div class="meta">
+        <span class="pill">MySQL</span>
+        <span class="pill">Node.js API</span>
+        <span class="pill">GitHub Pages</span>
+        <span class="pill">Render</span>
+      </div>
+    </div>
+  </header>
 
+  <main class="container">
     <div class="grid">
 
       <!-- BOOKS -->
       <section class="card" aria-label="Books Section">
-        <h2>Books</h2>
+        <div class="card__head">
+          <h2 class="card__title">Books</h2>
+          <div id="booksCounter" class="counter" style="display:none;"></div>
+        </div>
 
-        <div class="actions">
-          <button id="btnLoadBooks">רשימת ספרים</button>
+        <div class="controls">
+          <div class="actions">
+            <button class="btn btn--primary" id="btnLoadBooks">רשימת ספרים</button>
+          </div>
 
-          <input id="searchInput" type="text" placeholder="חיפוש לפי שם ספר / מזהה..." disabled />
+          <div class="field">
+            <span>חיפוש</span>
+            <input id="searchInput" type="text" placeholder="חיפוש לפי שם ספר / מזהה..." disabled />
+          </div>
 
-          <select id="sortSelect" disabled>
-            <option value="product_id_asc">מיון: מזהה עולה</option>
-            <option value="product_id_desc">מיון: מזהה יורד</option>
-            <option value="price_asc">מיון: מחיר עולה</option>
-            <option value="price_desc">מיון: מחיר יורד</option>
-            <option value="pages_asc">מיון: עמודים עולה</option>
-            <option value="pages_desc">מיון: עמודים יורד</option>
-            <option value="title_asc">מיון: שם (A→Z)</option>
-            <option value="title_desc">מיון: שם (Z→A)</option>
-          </select>
+          <div class="field">
+            <span>מיון</span>
+            <select id="sortSelect" disabled>
+              <option value="product_id_asc">מזהה עולה</option>
+              <option value="product_id_desc">מזהה יורד</option>
+              <option value="price_asc">מחיר עולה</option>
+              <option value="price_desc">מחיר יורד</option>
+              <option value="pages_asc">עמודים עולה</option>
+              <option value="pages_desc">עמודים יורד</option>
+              <option value="title_asc">שם (A→Z)</option>
+              <option value="title_desc">שם (Z→A)</option>
+            </select>
+          </div>
         </div>
 
         <div id="booksStatus" class="status hint">
           לחצי על <b>רשימת ספרים</b> כדי לטעון את הנתונים מה־DB.
         </div>
 
-        <div id="booksTableWrap"></div>
+        <div id="booksTableWrap" class="tableWrap"></div>
       </section>
 
       <!-- PARTICIPANTS -->
       <aside class="card" aria-label="Participants Section">
-        <h2>משתתפות</h2>
+        <div class="card__head">
+          <h2 class="card__title">משתתפות</h2>
+        </div>
 
         <div class="actions">
-          <button id="btnLoadParticipants">הצג משתתפים</button>
+          <button class="btn" id="btnLoadParticipants">הצג משתתפים</button>
         </div>
 
         <div id="participantsStatus" class="status hint">
@@ -169,8 +86,8 @@
 
     </div>
 
-    <div class="footer">Library Database Project — Shira & Hodaya ©</div>
-  </div>
+    <footer class="footer">Library Database Project — Shira & Hodaya ©</footer>
+  </main>
 
   <script>
     // =========================
@@ -178,7 +95,7 @@
     // אם את בודקת מקומית (כששרת רץ אצלך): "http://localhost:3000"
     // אם את בודקת דרך GitHub Pages: כאן חייב להיות ה-URL של Render (https)
     // =========================
-    const API_BASE = "https://final-project-1-4tg9.onrender.com"; // <-- תשני לכתובת ה-Render כשעובדים דרך GitHub Pages
+    const API_BASE = "https://final-project-1-4tg9.onrender.com";
 
     async function fetchJson(path) {
       const url = API_BASE + path;
@@ -187,15 +104,10 @@
       const contentType = res.headers.get("content-type") || "";
       const text = await res.text();
 
-      if (!res.ok) {
-        throw new Error(text || ("HTTP " + res.status));
-      }
-
-      // אם קיבלנו HTML במקום JSON – זו בדיוק הבעיה של API_BASE / שרת
+      if (!res.ok) throw new Error(text || ("HTTP " + res.status));
       if (!contentType.includes("application/json")) {
         throw new Error("השרת לא החזיר JSON. כנראה API_BASE לא נכון או שהשרת לא רץ.");
       }
-
       return JSON.parse(text);
     }
 
@@ -214,18 +126,20 @@
     const booksTableWrap = document.getElementById("booksTableWrap");
     const searchInput = document.getElementById("searchInput");
     const sortSelect = document.getElementById("sortSelect");
+    const booksCounter = document.getElementById("booksCounter");
 
     let allBooks = [];
 
     function renderBooksTable(rows) {
       if (!rows || rows.length === 0) {
         booksTableWrap.innerHTML = "";
+        booksCounter.style.display = "none";
         booksStatus.innerHTML = "<span class='error'>לא נמצאו ספרים.</span>";
         return;
       }
 
       booksTableWrap.innerHTML = `
-        <table>
+        <table class="table">
           <thead>
             <tr>
               <th>product_id</th>
@@ -239,7 +153,7 @@
             ${rows.map(r => `
               <tr>
                 <td>${escapeHtml(r.product_id)}</td>
-                <td>${escapeHtml(r.title)}</td>
+                <td class="cell-title">${escapeHtml(r.title)}</td>
                 <td>${escapeHtml(r.number_of_pages)}</td>
                 <td>${escapeHtml(r.author_id)}</td>
                 <td>${escapeHtml(r.price)}</td>
@@ -248,6 +162,9 @@
           </tbody>
         </table>
       `;
+
+      booksCounter.style.display = "inline-flex";
+      booksCounter.textContent = `מוצגים ${rows.length} ספרים`;
       booksStatus.innerHTML = `<span class="ok">נטענו ${rows.length} ספרים בהצלחה.</span>`;
     }
 
@@ -286,6 +203,7 @@
     btnLoadBooks.addEventListener("click", async () => {
       booksStatus.textContent = "טוען ספרים מה־DB...";
       booksTableWrap.innerHTML = "";
+      booksCounter.style.display = "none";
 
       try {
         allBooks = await fetchJson("/api/books");
@@ -315,10 +233,6 @@
       try {
         const parts = await fetchJson("/api/participants");
 
-        // תומך בכל אחד מהפורמטים:
-        // ["שירה זכרי","הודיה אסתר זכרי"]
-        // [{name:"..."}, ...]
-        // [{full_name:"..."}, ...]
         participantsList.innerHTML = (parts || []).map(p => {
           const name =
             (typeof p === "string") ? p :
